--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,5 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?xkfnmqghq#1" target="_blank">首页</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/1?njegk" target="_blank">动态网</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/2?upccsswjm" target="_blank">大纪元</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/4?cjryx" target="_blank">看中国</a> | <a href="https://d1znr9c9sm73cv.cloudfront.net/pHh5q?gzlkpqn" target="_blank">新生网</a> | <a href="https://dsgpxulwvf05x.cloudfront.net/tktpt?pwskml" target="_blank">阿波罗网</a> | <a href="https://d11leod1im7q2u.cloudfront.net/Mjpvu?yownj" target="_blank">干净世界</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/10?kmylcr" target="_blank">退党服务</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/Rffqf?tbxge" target="_blank">明慧广播</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/nw9Vn?gtbje" target="_blank">传奇时代</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/AF9AG?rxihnho" target="_blank">新境界影视</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/zqMQA?aoyvqng" target="_blank">文昭谈论</a> | <a href="https://dl1ez95kskssm.cloudfront.net/7?xeaqxsgb" target="_blank">明慧</a></p><p><a href="https://d259d2wq6kf78s.cloudfront.net/9?mlbvs" target="_blank">大法</a> | <a href="https://dh48pl2d5tlkv.cloudfront.net/3?ftuzhv" target="_blank">新唐人</a> | <a href="https://dcz6rimunj42y.cloudfront.net/obAhT?fionvus" target="_blank">人民报</a> | <a href="https://d3v04vdnqz6gui.cloudfront.net/xXNHu?trqvisiz" target="_blank">放光明</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/5?otoryhnj" target="_blank">新纪元</a> | <a href="https://d3myewunzonann.cloudfront.net/6?xrxgxvs" target="_blank">希望之声</a> | <a href="https://d1xqyoddjp48c4.cloudfront.net/11?dvrsvo" target="_blank">无界网络</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/Pueji?lmhitd" target="_blank">追查国际</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/16?eoygud" target="_blank">明慧之窗</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/LdvzZ?rbahku" target="_blank">细语人生</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/fBn3r?abvunqa" target="_blank">新世纪影视</a> | <a href="https://d1ntfewljph5k2.cloudfront.net/PUWMb?sphonoepk" target="_blank">江峰时刻</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/8?agvsnixxr" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273137.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273616-240619162101100311-320x200.jpg"><p align="center">中华传统武术亚太初赛55人入围 将赴美复赛</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273137.md#1" title="中华传统武术亚太初赛55人入围 将赴美复赛""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273616-240619162101100311-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?mqzfuj#1" target="_blank">首页</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/1?zqwrnqo" target="_blank">动态网</a> | <a href="https://db1uzmukbk5lb.cloudfront.net/2?yrhzkt" target="_blank">大纪元</a> | <a href="https://dmt6yqw0je6jw.cloudfront.net/4?ycgnhu" target="_blank">看中国</a> | <a href="https://dme0bxbvomkno.cloudfront.net/pHh5q?pmqbezldk" target="_blank">新生网</a> | <a href="https://d1nvr7ffvd2d6n.cloudfront.net/tktpt?jpkdojyw" target="_blank">阿波罗网</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/Mjpvu?fkgqccpq" target="_blank">干净世界</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/10?chdcspytt" target="_blank">退党服务</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/Rffqf?pagcs" target="_blank">明慧广播</a> | <a href="https://d282b678eon3c.cloudfront.net/nw9Vn?tqizap" target="_blank">传奇时代</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/AF9AG?plyqu" target="_blank">新境界影视</a> | <a href="https://doqmgyop4u892.cloudfront.net/zqMQA?pinar" target="_blank">文昭谈论</a> | <a href="https://d1nm4aa0eu3bxh.cloudfront.net/7?hudbfhcga" target="_blank">明慧</a></p><p><a href="https://d3siwajeg0khti.cloudfront.net/9?ebtzfq" target="_blank">大法</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/3?vpbsl" target="_blank">新唐人</a> | <a href="https://d2frcdcjb0c6wq.cloudfront.net/obAhT?jcwjkg" target="_blank">人民报</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/xXNHu?zqqpb" target="_blank">放光明</a> | <a href="https://dme0bxbvomkno.cloudfront.net/5?dmxbm" target="_blank">新纪元</a> | <a href="https://dol9bue5bysdj.cloudfront.net/6?tktjiwxk" target="_blank">希望之声</a> | <a href="https://d124e4v75n9sum.cloudfront.net/11?gnfat" target="_blank">无界网络</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/Pueji?ivaqrzcma" target="_blank">追查国际</a> | <a href="https://d11leod1im7q2u.cloudfront.net/16?ndttwkz" target="_blank">明慧之窗</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/LdvzZ?oemsdi" target="_blank">细语人生</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/fBn3r?mtujbaucn" target="_blank">新世纪影视</a> | <a href="https://dvucua6a0b85v.cloudfront.net/PUWMb?rdwig" target="_blank">江峰时刻</a> | <a href="https://djwddd4nnr0na.cloudfront.net/8?ikuinqobc" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273604.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14140843-GettyImages-1813819526-320x200.jpg"><p align="center">欧盟版权规定对Shein有何影响</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273604.md#1" title="欧盟版权规定对Shein有何影响""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14140843-GettyImages-1813819526-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273583.md#1" title="布林肯：中共必须停止支持俄罗斯的国防工业""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273605-GettyImages-2157597877-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273366.md#1" title="迎接夏至 6月21日将现“草莓月亮”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273368-2-9-17348-moon-strawberry-49568-1080x720-320x200.jpg">&nbsp;</a>
@@ -12,13 +11,14 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273221.md#1" title="中国5月经济数据不乐观 专家：已是僵尸经济""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/02/GettyImages-52452647-1-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273136.md#1" title="巴西发展稀土或打破中共垄断 专家析意义""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14267728-10_id14150784-000_Hkg4177126-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273108.md#1" title="墨国毒贩勾结中国地下钱庄洗钱 美起诉24人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/03/id14203608-172905-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272966.md#1" title="组图：中国北方高温南方暴雨 灾害损失巨大""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14273030-AFP__20240618__34XB6XQ__v1__HighRes__ChinaWeatherFlood-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14273715.md#1">未提供仓库作业配额 亚马逊被加州罚590万美元</a><br>
-:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273709.md#1">调查：生活成本是加州居民最关心的问题</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272914.md#1">小米SU7上市两个月 车主开始卖车</a><br>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273609.md#1">《国有器官》纽约首映 聚焦“屠杀进行时”</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273676.md#1">陈十美海外薪传40载 获中华会馆终身成就奖</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273576.md#1">为何印度股市涨幅超纳指 中国股市萎靡不振</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273709.md#1">调查：生活成本是加州居民最关心的问题</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272914.md#1">小米SU7上市两个月 车主开始卖车</a><br>
+:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273609.md#1">《国有器官》纽约首映 聚焦“屠杀进行时”</a><br>
+:clock8: <em>22分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273676.md#1">陈十美海外薪传40载 获中华会馆终身成就奖</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273576.md#1">为何印度股市涨幅超纳指 中国股市萎靡不振</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273664.md#1">冷脸面对中共央视直播 女星周也被指踢到钢板</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272394.md#1">深圳一学区房 每平米从14万跌到只剩4万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272788.md#1">分析：普京访朝鲜 中共为何左右为难</a><br>
@@ -51,7 +51,6 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273174.md#1">大陆连锁舞蹈机构跑路 受害者损失上万</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273664.md#1">冷脸面对中共央视直播 女星周也被指踢到钢板</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272933.md#1">【新闻大家谈】中共上调养老金 惹骂声一片</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14272966.md#1">组图：中国北方高温南方暴雨 灾害损失巨大</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272764.md#1">【新闻大破解】G7升级批中共 和平峰会各国选边</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272357.md#1">【十字路口】自曝美怂恿攻台 北京龟缩还是设局</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272766.md#1">【菁英论坛】故宫频显凶兆 中共绝嗣</a><br>
@@ -97,8 +96,9 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270543.md#1">古天乐欠债830万不还？被提告原因遭质疑</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270583.md#1">英国宣布对俄罗斯新制裁 含5中企</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270579.md#1">李强回避提问 新西兰议员吁调查“外国干涉”</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d38x0vvi8awi8i.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d38x0vvi8awi8i.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 48,198</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/14/n14270441.md#1">李强访纽之际 媒体揭中共跨国镇压实例</a><br>
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dxdtvea4l9dev.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://dxdtvea4l9dev.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 48,198</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
